--- a/resources/public/css/main.css
+++ b/resources/public/css/main.css
@@ -1,7 +1,14 @@
 @font-face {
-  font-family: "product";
+  font-family: "Product Sans";
   src: url("/static/fonts/Product Sans Regular.ttf") format("truetype");
   font-weight: 400;
+  display: swap;
+}
+
+@font-face {
+  font-family: "Product Sans";
+  src: url("/static/fonts/Product Sans Bold.ttf") format("truetype");
+  font-weight: 700;
   display: swap;
 }
 
@@ -9,7 +16,14 @@
   --font-default: "product", system-ui, -apple-system, "BlinkMacSystemFont",
     "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Open Sans",
     "Helvetica Neue", sans-serif;
+  --default-font-size: 1.6rem;
+
   --main-background-color: #EAECF1;
+  --grey-background-color: #F8F8F8;
+  --grey-neutral-color: #D9D9D9;
+  --success-color: #22D677;
+  --error-color: red;
+  --alert-color: yellow;
   }
 
 html {
@@ -19,4 +33,5 @@ html {
 body {
   font-family: var(--font-default);
   background-color: var(--main-background-color);
+  font-size: var(--default-font-size);
 }
